@@ -1,3 +1,13 @@
+2004-10-11  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* makefile:
+	Use BDIR macros for setup build directories.
+	Remove SUPPORT macros.
+	Make build_win32 depend from gai_strerror.o wspiapi.o files placed to
+	 the build directory.
+	Make common dependence to have necessary object files in the build
+	 directory.
+
 2004-09-29  Pascal Obry  <pascal@obry.org>
 
 	* makefile:
